# enginiring-practices-ml

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  REPORT.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py  test.py
.dvc/: config
airflow/: Dockerfile  docker-compose.yml  requirements.txt
airflow/dags/: alerting.py  ml_dag.py  pipelines.py  warppers.py
airflow/dags/config/: base_config.py  loader.py
airflow/dags/data/: data.csv
airflow/dags/models/: model.pkl
airflow/dags/tmp/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
docs/: Makefile  conf.py  index.rst  make.bat
mlruns/0/: meta.yaml
mlruns/0/0a0a3336bf1243f5919d319f8f2ab544/: meta.yaml
mlruns/0/0a174b011bb446a28ff4b7acfeadf28c/: meta.yaml
mlruns/0/0bb580c3f9a443278742587b0e8ad29c/: meta.yaml
mlruns/0/2668255a2d0d4106a029a25391857438/: meta.yaml
mlruns/0/2d1814f135bf4b6ca25f5f373d3f0a3f/: meta.yaml
mlruns/0/302104568db94380ab7bac4fc17c0453/: meta.yaml
mlruns/0/44b9b2f299ce42c081836449ec317989/: meta.yaml
mlruns/0/4b9d5732acdd48929634b312a7b82729/: meta.yaml
mlruns/0/4f5f81f7a30f4eb2bec3c9792e5779ff/: meta.yaml
mlruns/0/58664905d9724d98a975eed213014bef/: meta.yaml
mlruns/0/70a0c53e58f64270a165a6b5a413446d/: meta.yaml
mlruns/0/740d5694ab1a42eea35d739875195a5e/: meta.yaml
mlruns/0/9f93f5fb82114744afb2a1875f7558e0/: meta.yaml
mlruns/0/ad9429f9915149199e6427d22855a3c1/: meta.yaml
src/: exp_integration.py  exp_search.py  exp_utils_and_decs.py  main.py
src/data/: iris_dataset.csv.dvc
(+114 files in other folders)
